# CS208

./: .gitignore  README.md
BackEnd/: .env  Cargo.toml  docker-compose.yml  schema.sql
BackEnd/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
BackEnd/doc/mems_office/: all.html  fn.__loader.html  fn.__runner.html  fn.__shuttle_actix_web.html  fn.main.html  index.html  sidebar-items.js  struct.AppState.html
BackEnd/doc/mems_office/auth/: fn.auth_config.html  index.html  sidebar-items.js  struct.UserInfo.html
BackEnd/doc/mems_office/auth/jwt/: index.html  sidebar-items.js  struct.AdminEmail.html  struct.JwToken.html
BackEnd/doc/mems_office/auth/login/: fn.login.html  index.html  sidebar-items.js  struct.Login.html  (+1 more)
BackEnd/doc/mems_office/db/: index.html  sidebar-items.js
BackEnd/doc/mems_office/lists/: fn.get_receiver.html  fn.get_students.html  fn.list_config.html  index.html  sidebar-items.js  struct.create_students.html
BackEnd/doc/mems_office/view/: fn.add_to_previous.html  fn.view_config.html  index.html  sidebar-items.js  struct.ApprovalData.html  struct.accept_reject.html  struct.form_handler.html
BackEnd/doc/mems_office/ws/: fn.chat_route.html  fn.ws_config.html  index.html  sidebar-items.js
BackEnd/doc/src/mems_office/: main.rs.html
BackEnd/src/: main.rs
BackEnd/src/auth/: jwt.rs  login.rs  mod.rs  register.rs
BackEnd/src/db/: date.rs  fetch_id.rs  mod.rs  structs.rs
BackEnd/src/lists/: fetch_forms.rs  mod.rs
BackEnd/src/view/: forms.rs  get_form.rs  labs.rs  mod.rs  profile.rs
BackEnd/src/ws/: mod.rs  server.rs  session.rs
(+189 files in other folders)
