[package]
name = "shutpostesting"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = "1.0.148"
serde_derive = "1.0.195"
actix-cors = "0.7.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26.0"
futures = "0.3.30"
jsonwebtoken = "9.2.0"
chrono = "0.4.31"
bcrypt = "0.15.0"
serde_json = "1.0.108"
dotenv = "0.15.0"